add deprecation for graph.byName with quoted arguments ()
deprecation is only added once cypher 25 is enabled, since some graph
names have to be rewritten for Cypher 25.

E.g. Cypher 5: 
```
USE graph.byName('`composite.with.dot`.foo')
```

Cypher 25:
```
USE graph.byName('composite.with.dot.foo')
```